<resources>
    <string name="app_name">Merlin</string>
    <string name="google_android_map_api_key">AIzaSyAZnVuq1hEVH924C3hDnI6sfkqwpZbrJ78</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="spinner_title">Please select</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_verification">RegistrationActivity</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="title_activity_search_customer">SearchCustomerActivity</string>
    <string name="title_activity_search_result">SearchResultActivity</string>
    <string name="title_activity_lead">LeadActivity</string>
    <string name="title_activity_customer">CustomerActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_customer_extras">CustomerExtrasActivity</string>
    <string name="title_activity_business">BusinessActivity</string>
    <string name="title_activity_loans">LoansActivity</string>
    <string name="title_activity_suspense">SuspenseActivity</string>
    <string name="title_activity_reports">ReportsActivity</string>
    <string name="title_activity_sync_users">SyncUsersActivity</string>
    <string name="title_activity_sync_customers">SyncCustomersActivity</string>
    <string name="title_activity_syn_business">SynBusinessActivity</string>
    <string name="title_activity_sync_loans">SyncLoansActivity</string>
    <string name="title_activity_sync_sms">SyncSms</string>
    <string name="not_registered">Register Now</string>
    <string name="show_pwd">Show Password</string>
    <string name="forgot">Forgot password</string>
    <string name="title_activity_login_sync">LoginSync</string>
    <string name="title_activity_lead_outcomes">LeadOutcomesActivity</string>
    <string name="title_activity_convert">ConvertActivity</string>
    <string name="title_activity_convert_lead">ConvertLeadActivity</string>
    <string name="title_activity_convert_stepper">ConvertStepperActivity</string>
    <string name="title_activity_business_stepper">BusinessStepperActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_customer_act_stepper">CustomerActStepperActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_loan_application">Loan_application</string>
    <string name="title_activity_customer_details">CustomerDetailsActivity</string>
    <string name="title_activity_business_details">BusinessDetailsActivity</string>
    <string name="title_activity_sms">SmsActivity</string>
</resources>
